# BlockByte

./: .gitignore  Cargo.toml
.run/: Build Web.run.xml  Export Model.run.xml  Run Client.run.xml  Run Server.run.xml  Run server.run.xml
bbscript/: Cargo.toml
bbscript/src/: ast.rs  environment.rs  eval.rs  lex.rs  lib.rs  syntax.lalrpop  variant.rs
client/: .gitignore  Cargo.toml
client/src/: chunk_shader.wgsl  content.rs  game.rs  gui.rs  gui_shader.wgsl  lib.rs  main.rs  model.rs  net.rs  render.rs  shader.wgsl  texture.rs
client/src/assets/: chunk_shader.wgsl  gui_shader.wgsl  missing.bbm  model_shader.wgsl  outline_shader.wgsl
client/web/: index.html
common/: Cargo.toml
common/src/: block_palette.rs  content.rs  gui.rs  lib.rs  messages.rs
docs/: book.toml
docs/src/: SUMMARY.md
model_exporter/: .gitignore  Cargo.toml  in.bbmodel  in2.bbmodel
model_exporter/src/: main.rs
server/: .gitignore  Cargo.toml  README.md
server/mods/computercraft/: descriptor.json
server/mods/computercraft/scripts/: init.rhs
server/mods/core/: descriptor.json
server/mods/core/blocks/: simple_block.json
server/mods/core/entities/: item.json  player.json
server/mods/core/events/: health_commands.json  health_commands.rhs  health_overlay_init.json  health_overlay_init.rhs  open_inventory.rhs  player_join.json  player_join.rhs  player_spawn_info.rhs
server/mods/core/gui/: layout_campfire.json  layout_creative.json  layout_health.json  layout_hotbar.json
server/mods/core/images/: health_bar.json
server/mods/core/models/: item_entity.bbm  player.bbm  viewmodel.bbm
server/mods/core/scripts/: health.rhs  init.rhs  item_entity.rhs  simple_block.rhs
server/mods/core/scriptsz/: init.rhs
server/mods/example/gui/: layout1.json  layout3.json  layout5.json  layout_campfire.json
server/mods/example/images/: images.txt  sand.png~
server/mods/example/loot_tables/: branch.json  grass_foliage.json  log.json  malachite_ore.json  malachite_rock.json  rock.json
server/mods/example/models/: campfire.bbm  player.bbm  stone.bbm  viewmodel.bbm
server/mods/example/recipes/: cooked_beef.json  grass_twine.json  sharpened_rock.json
server/mods/example/scripts/: init.rhs
server/mods/example/structures/: branch.json  clay_patch.json  grass_foliage.json  malachite_chunk.json  tree.json
server/mods/gregtech/: descriptor.json
server/mods/gregtech/scripts/: metals.rhs
server/mods/guns/: descriptor.json
server/mods/guns/models/: shotgun.bbm
server/mods/guns/scripts/: init.rhs
server/mods/overworld/: descriptor.json
server/mods/overworld/biomes/: forest.json  ocean.json  stone_biome.json
server/mods/overworld/blocks/: branch.json  dirt.json  grass.json  grass_plant.json  grass_plant_small.json  gravel.json  leaves.json  log.json  rock.json  sand.json  stone.json  ticking_test.json  water.json
server/mods/overworld/images/: grass_plant.json  grass_plant_small.json  grass_side.json
server/mods/overworld/loot_tables/: grass.json
server/mods/overworld/models/: branch.bbm  log_10.bbm  log_12.bbm  log_14.bbm  log_2.bbm  log_4.bbm  log_6.bbm  log_8.bbm  log_connector_10.bbm  log_connector_12.bbm  log_connector_14.bbm  log_connector_2.bbm  log_connector_4.bbm  log_connector_6.bbm  log_connector_8.bbm  rock.bbm
server/mods/overworld/scripts/: init.rhs
server/mods/overworld/structures/: big_rock.json  branch.json  grass_foliage.json  gravel_patch.json  rock.json  savanna_grass_foliage.json  stone_patch.json  tree.json  tree_big.json  tree_palm.json
server/mods/overworld/structures2/: branch.json  cactus.json  tree.json  tree_savanna.json
server/mods/overworld/tags/: cactus_connecting.json  logs_connecting.json
server/mods/overworld/world_generators/: overworld.json
server/src/: inventory.rs  main.rs  mods.rs  net.rs  registry.rs  util.rs  world.rs  worldgen.rs
server/src/assets/: font.txt  item_model.bbm
src/: inventory.rs  main.rs  mods.rs  net.rs  registry.rs  threadpool.rs  util.rs  world.rs  worldgen.rs
(+14 files in other folders)
