[package]
name = "block_byte_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "*"
json = "0.12.4"
endio = "0.1.0"
array-init = "2.1.0"
atomic-counter = "1.0.1"
ctrlc = "3.4.0"
uuid = {version="1.3.3",features=["v4"]}
libflate = "1.3.0"

[profile.release]
debug = true