[package]
name = "bbscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
immutable_string = "0.1.1"
lalrpop-util = {version="0.20.0",features = ["lexer","unicode"]}
dyn-clone = "1.0.14"
parking_lot = "0.12"

[build-dependencies]
lalrpop = "0.20.0"