[package]
name = "block_byte_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_either = "0.2.1"
strum = "0.26.1"
strum_macros = "0.26.1"
