[package]
name = "block_byte_model_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block_byte_common = { path = "../common" }

json = "0.12.4"
uuid = "1.4.1"
either = "1.9.0"
bitcode = {version="0.4.0",features = ["serde"]}
glob = "0.3.1"